--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Index</title>
     <link rel="icon" type="image/png" href="Logo.png">
 </head>
-<body>
+<body bgcolor="#B695C0">
     <header>
         <div align="center">
         <div align="right">
