--- a/Practica1_VentaAutos.html
+++ b/Practica1_VentaAutos.html
@@ -16,7 +16,7 @@
     <h2>Definición del problema:<br></h2>
         <p>La agencia de autos Volkswagen vende automóviles nuevos y usados sus clientes. Los clientes pueden adquirir N autos, 
         según su capacidad económica. 
-        Los autos pueden venderse a crédito o al contado. Cada empleado gana una comisión del 10% del valor total de auto, por cada auto vendido </p>
+        Los autos pueden venderse a crédito o al contado. Cada empleado gana una comisión del 10% del valor total de autos, por cada auto vendido </p>
         <h2>Diagrama E-R (Modelo conceptual)</h2>
         <center><img src="DiagramaERA.jpg" alt=""; style="width:900px;"></imgsrc></center>
 
