--- a/Practica1_VentaAutos.html
+++ b/Practica1_VentaAutos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica 1</title>
-    <link rel="stylesheet" href="EstilosPractica!.css"/>
+    <link rel="stylesheet" href="EstilosPractica1.css"/>
 </head>
 <body>
     <header>
