--- a/Practica1_VentaAutos.html
+++ b/Practica1_VentaAutos.html
@@ -18,10 +18,10 @@
         según su capacidad económica. 
         Los autos pueden venderse a crédito o al contado. Cada empleado gana una comisión del 10% del valor total de autos, por cada auto vendido </p>
         <h2>Diagrama E-R (Modelo conceptual)</h2>
-        <center><img src="DiagramaERA.jpg" alt=""; style="width:870px;"></imgsrc></center>
+        <center><img src="DiagramaERB.jpg" alt=""; style="width:870px;"></imgsrc></center>
 
     <h2>Diagrama Relacional (Modelo lógico)</h2>
-    <center><img src="DiagramaRelacionalA.jpg" alt=""; style="width:870px;"></imgsrc></center>
+    <center><img src="DiagramaRelacionalB.jpg" alt=""; style="width:870px;"></imgsrc></center>
     
 </body>
 <footer>
