--- a/Practica2_Biblioteca.html
+++ b/Practica2_Biblioteca.html
@@ -24,6 +24,9 @@
 
     <h2>Diagrama Relacional (Modelo lógico)</h2>
     <center><img src="DiagramaRelacionanB.JPG" alt=""; style="width:900px;"></imgsrc></center>
+
+    <h2>Base de datos(Modelo Físico)</h2>
+    <center><iframe src="BaseDatosP2.pdf" height="800px" width="800px"></iframe></center>
     
     
 </body>
