--- a/ExamenPractico_1.html
+++ b/ExamenPractico_1.html
@@ -27,7 +27,7 @@
     <center><img src="DiagramaRelEP.jpeg" alt=""; style="width:900px;"></imgsrc></center>
 
     <h2>Base de datos(Modelo Físico)</h2>
-    <center><iframe src="BaseDatosVet.pdf" height="800px" width="800px"></iframe></center>
+    <center><iframe src="ExamenP1-183046-WEB2.pdf" height="800px" width="800px"></iframe></center>
     
     
 </body>
