--- a/ExamenPractico_1.html
+++ b/ExamenPractico_1.html
@@ -24,7 +24,7 @@
         <center><img src="DiagramaEREP1.jpeg" alt=""; style="width:900px;"></imgsrc></center>
 
     <h2>Diagrama Relacional (Modelo lógico)</h2>
-    <center><img src="DiagramaRelEP.jpeg" alt=""; style="width:900px;"></imgsrc></center>
+    <center><img src="diag.jpg" alt=""; style="width:900px;"></imgsrc></center>
 
     <h2>Base de datos(Modelo Físico)</h2>
     <center><iframe src="ExamenP1-183046-WEB2.pdf" height="800px" width="800px"></iframe></center>
